bobcat (2.07.03) (ISN)

  * Repaired persistent bug in String::unescape

bobcat (2.07.02)

  * Repaired a bug in converting escaped hexadecimal characters in
    String::unescape, reported by Richard Berendsen.

  * The FnWrap example is now about FnWrap, not anymore about FnWrap2c

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 24 Feb 2010 08:33:51 +0100

bobcat (2.07.01)

  * Minimized class FnWrap's member access rights. FnWrap's inner organization
    improved. Instead of creating nested FnWrap1 and FnWrap2 objects
    inheritance is used. Also, all function template implementations were
    moved to below the class interface.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 15 Feb 2010 12:42:49 +0100

bobcat (2.07.00)

  * TypeTrait now supports tests for rvalue reference types.
  * FBB::insertable and FBB::throwable are no longer required when using Errno
  * The gptr() < egptr() checks in underflow() functions (IFdStreambuf and
    Randbuffer) are superfluous and have been removed.
  * DateTime's man-page contains a caveat for setMonth.
  * Fswap's man-page BUGS section is augmented with a warning against swapping
    streams.
  * Bobcat's main man-page received an entry referring to the TypeTrait class
    template.
  * Repaired cgi/push.cc and cgi/accept.cc
  * New class: FBB::FnWrap, easier to use than and providing all the features
    of FnWrap[12]c?. See its man-page for details. 
  * Not-implemented constructors and functions, previously flagged with the
    // NI comment, are now using '= delete'. Likewise, implementaitions of 
    explicitly implemented empty default constructors were removed and
    replaced by '= default'. Some con- and destructors were kept due to
    non-public access. The added destructors were defined in source files, and
    not in-line to localize the class's Vtables with the destructor's source
    files. 
  * Compilation of, e.g., Glob::operatorassign.cc produces a warning in