@@ -73,7 +73,8 @@ class Arg
             friend class ArgConfig;
 
             public:
-                explicit LongOption(char const *name, Arg::Type type = None);
+                explicit LongOption(char const *name);
+                LongOption(char const *name, Arg::Type type = None);
                 LongOption(char const *name, int optionChar);
 
                 std::string const &getName() const;
