@@ -1,6 +1,13 @@
-bobcat (2.07.03) (ISN)
+bobcat (2.08.00) (ISN)
 
   * Repaired persistent bug in String::unescape
+
+  * String::unescape can also be used for wide characters (exceeding 1 byte)
+    in which case \x must be followed by 4 hex. characters 
+
+  * Multi-parameter constructors of Arg::LongOption no longer use default
+    arguments to allow the use of initializer lists, added
+    Arg::LongOption(char const *name)
 
 bobcat (2.07.02)
 
